# testing_project_GTest

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: calculator.h
src/: calculator.cpp
test/: calculator_test.cpp
